Bugs behoben: Filter zeigen die aktuellen Filter und sind miteinander kompatibel